test overflow fix 2

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -133,5 +133,5 @@ body,html {
     font-family: 'Monaco', 'Consolas', sans-serif;
     position: relative;
     overflow: hidden;
-    height: 100vh;
+    height: 100%;
 }
